# dradis

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  build.rs  notes.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deb_pkg.yml  lints.yml  release-dradis.yml  release.yml
benches/: bench_decode.rs
boomer/: Cargo.toml  README.md
boomer/src/: main.rs
dev/bench/: data.js
device-info/: README.md
device-info/raspberrypi5+geekworm-c779/: media-ctl-topology.txt
docs/: architecture.md  device-info.md
docs/device-info/raspberrypi5+geekworm-c779/: urls.txt
dradis/: Cargo.toml  README.md
dradis-frame-check/: Cargo.toml
dradis-frame-check/benches/: bench_decode.rs
dradis-frame-check/src/: lib.rs
dradis-frame-check/src/asm/: mod.rs
dradis-frame-check/src/asm/aarch64/: memcpy-advsimd.S  memcpy.S
dradis-frame-check/tests/: frames.rs  tests.rs
dradis-frame-check/tests/data/: test-qrcode-detection.rgb888.raw  test-qrcode-hash-mismatch.rgb888.raw  valid-frame-ver-2-0.bgr888.raw  valid-frame-ver-2-0.rgb888.raw  valid-frame-ver-2-1.xxhash3.bgr888.raw  valid-frame-ver-2-1.xxhash3.rgb888.raw
dradis-media-controller/: Cargo.toml
dradis-media-controller/examples/: media-ctl.rs
dradis-media-controller/src/: lib.rs
dradis-threads-pool/: Cargo.toml
dradis-threads-pool/src/: lib.rs
dradis/examples/: frame-dump-analysis.rs
dradis/samples/: test-two-modes-720p-1080p.yaml
dradis/src/: helpers.rs  main.rs  quirks.rs  tracing_utils.rs
examples/: test-edid.rs  test-libv4l.rs  test-other-rework.rs  test-rework.rs  test-v4l2r.rs
facet-enum-repr/: Cargo.toml
facet-enum-repr-derive/: Cargo.toml
facet-enum-repr-derive/src/: lib.rs
lib/v4lise/: Cargo.toml  build.rs
lib/v4lise/src/: capabilities.rs  device.rs  error.rs  formats.rs  lib.rs  lowlevel.rs  queue.rs
linux-mc/: Cargo.toml  README.md
linux-mc/examples/: media-ctl.rs
linux-mc/src/: bindgen-wrapper.h  lib.rs  raw.rs  revocable.rs
linux-mc/tests/: vimc.rs
linux-raw/: Cargo.toml  README.md
linux-raw/src/: lib.rs
linux-uevent/: Cargo.toml  README.md
linux-uevent/examples/: test-uevent.rs
linux-uevent/src/: lib.rs
samples/: test-single-mode-720p.yaml
src/: frame_check.rs  helpers.rs  main.rs
v4l2-raw/: Cargo.toml  README.md
v4l2-raw/src/: bindgen-wrapper.h  format.rs  lib.rs  raw.rs  wrapper.rs
v4lise/: Cargo.toml  build.rs
v4lise/src/: capabilities.rs  device.rs  error.rs  formats.rs  lib.rs  lowlevel.rs  queue.rs  wrapper.h
