[package]
name = "boomer"
version = "0.1.0"
authors = ["Maxime Ripard <maxime@cerno.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "^1.0", default-features = false, features = ["std"] }
byteorder = { version = "^1.3", default-features = false, features = ["std"] }
clap = { version = "^2.33", default-features = false }
image = { version = "^0.23", default-features = false, features = ["png"] }
log = { version = "^0.4", default-features = false, features = ["std"] }
nucleid = { git = "https://github.com/mripard/nucleid.git" }
simplelog = { version = "^0.10", default-features = false, features = ["termcolor"] }
twox-hash = { version = "^1.5", default-features = false, features = ["std"] }
