[package]
authors.workspace = true
description = "HDMI Test Application, DUT Side"
edition = "2018"
license-file.workspace = true
name = "boomer"
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
image = { version = "0.25.6", default-features = false, features = ["png"] }
log = { version = "0.4.27", default-features = false, features = ["std"] }
nucleid = { git = "https://github.com/mripard/nucleid.git", rev = "b084a0fb0dc998c68b1ca660c7ac876a00a815fd" }
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
serde.workspace = true
serde_json.workspace = true
simplelog = { version = "0.12.2", default-features = false, features = ["termcolor"] }
twox-hash.workspace = true

[[bin]]
name = "boomer"
bench = false
