[package]
authors.workspace = true
description = "HDMI Test Application, DUT Side"
edition = "2018"
license-file.workspace = true
name = "boomer"
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
frame_check.workspace = true
image.workspace = true
nucleid.workspace = true
pix.workspace = true
qrcode.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[[bin]]
name = "boomer"
bench = false
