[package]
authors.workspace = true
description = "Dradis Framebuffer Validation Library"
edition.workspace = true
license-file.workspace = true
name = "dradis-frame-check"
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
image.workspace = true
pix.workspace = true
png.workspace = true
rxing.workspace = true
serde.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
threads_pool.workspace = true
tracing.workspace = true
twox-hash.workspace = true

[dev-dependencies]
criterion.workspace = true
test-log.workspace = true

[lib]
bench = false

[lints]
workspace = true

[[bench]]
name = "bench_decode"
path = "benches/bench_decode.rs"
harness = false
