[package]
authors.workspace = true
description = "Linux Media Controller Library"
edition.workspace = true
license-file.workspace = true
name = "linux-mc"
publish = false
repository.workspace = true
version.workspace = true

[build-dependencies]
bindgen.workspace = true

[dependencies]
bitflags.workspace = true
bytemuck.workspace = true
facet.workspace = true
facet-enum-repr.workspace = true
linux-raw.workspace = true
rustix.workspace = true
tracing.workspace = true

[dev-dependencies]
clap.workspace = true
rstest.workspace = true
test-log.workspace = true
tracing.workspace = true

[features]
vimc = []

[lints]
workspace = true
