[package]
name = "linux-uevent"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
neli.workspace = true
rustix.workspace = true
tracing.workspace = true

[dev-dependencies]
clap.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
