[package]
authors.workspace = true
edition.workspace = true
license-file.workspace = true
name = "v4lise"
repository.workspace = true
version = "0.1.0"

[dependencies]
bitflags = "2.5.0"
libc = "0.2.155"
nix = { version = "0.29.0", features = ["ioctl"] }
strum_macros.workspace = true

[build-dependencies]
bindgen.workspace = true

[lib]
bench = false
