[package]
authors.workspace = true
edition.workspace = true
license-file.workspace = true
name = "v4lise"
repository.workspace = true
version = "0.1.0"

[dependencies]
bitflags.workspace = true
libc.workspace = true
nix.workspace = true
strum_macros.workspace = true

[build-dependencies]
bindgen.workspace = true

[lib]
bench = false
